--- a/GA/CMakeLists.txt
+++ b/GA/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10.2)
 project(GA)
 
-add_library(${PROJECT_NAME} src/individual.cpp)
+add_library(${PROJECT_NAME} src/individual.cpp src/helper.cpp)
 add_library(sub::lib2 ALIAS ${PROJECT_NAME})
 
 target_include_directories( ${PROJECT_NAME}
