--- a/Json/CMakeLists.txt
+++ b/Json/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10.2)
-project(JsonReader)
+project(Json)
 
-add_library(${PROJECT_NAME} src/jsonReader.cpp)
+add_library(${PROJECT_NAME} src/jsonReader.cpp src/jsonWriter.cpp)
 add_library(sub::lib1 ALIAS ${PROJECT_NAME})
 
 target_include_directories( ${PROJECT_NAME}
