--- a/GA/CMakeLists.txt
+++ b/GA/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10.2)
 project(GA)
 
 add_library(${PROJECT_NAME} src/individual.cpp src/helper.cpp src/crossover.cpp src/mutation.cpp src/fitness.cpp
-            src/parent.cpp)
+            src/parent.cpp src/survivor.cpp)
 add_library(sub::lib2 ALIAS ${PROJECT_NAME})
 
 target_include_directories( ${PROJECT_NAME}
