--- a/part2/Json/CMakeLists.txt
+++ b/part2/Json/CMakeLists.txt
@@ -7,3 +7,7 @@ add_library(sub::lib1 ALIAS ${PROJECT_NAME})
 target_include_directories( ${PROJECT_NAME}
     PUBLIC ${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/../GA/include
 )
+
+target_link_libraries(${PROJECT_NAME}
+    sub::lib2
+)
