--- a/part1/Json/CMakeLists.txt
+++ b/part1/Json/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10.2)
+cmake_minimum_required(VERSION 3.5.1)
 project(Json)
 
 add_library(${PROJECT_NAME} src/jsonReader.cpp src/jsonWriter.cpp)
@@ -7,3 +7,5 @@ add_library(sub::lib1 ALIAS ${PROJECT_NAME})
 target_include_directories( ${PROJECT_NAME}
     PUBLIC ${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/../GA/include
 )
+
+set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
